# AuxDM

./: CMakeLists.txt  main.cpp
Data/: AtomicCoords_Slater  C_slater_QZ4P  M_slater_QZ4P  QWt  QuadWeights  print_bla
include/: AtomInfo.h  AuxDensityMatrix.h  AuxDensityMatrixSlater.h  SlaterBasisData.h  SlaterBasisSet.h  SlaterPrimitive.h  SphericalHarmonicFunc.h  readQuadWeightsFile.h
src/: AtomInfo.cpp  AuxDensityMatrix.cpp  AuxDensityMatrixSlater.cpp  SlaterBasisData.cpp  SlaterBasisSet.cpp  SlaterPrimitive.cpp  SphericalHarmonicFunc.cpp
utils/: readQuadWeightsFile.cpp
